--- a/style.css
+++ b/style.css
@@ -127,5 +127,6 @@ p {
     text-align:right;
     font-family:"Dancing script", cursive;
     margin-right:10px;
+    margin-bottom:100px;
     
 }
